--- a/src/global.css
+++ b/src/global.css
@@ -4,6 +4,9 @@ body {
 }
 
 .container {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   gap: 50px;
+  width: 1100px;
+  margin: 0 auto;
 }
