--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,5 @@
 body {
-  padding: 50px 30px;
+  padding: 20px 30px;
   margin: 0;
 }
 
@@ -16,10 +16,34 @@ button:hover {
   background-color: #91a98250;
 }
 
+button:active {
+  background-color: #73816b50;
+}
+
 .container {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 50px;
   width: 1100px;
   margin: 0 auto;
+}
+
+.table-wrapper {
+  height: 75vh;
+  overflow-y: scroll;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar {
+  width: 7px;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #c8c8c8;
 }
